--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     <!-- != top navbar -->
     <!-- breadcrumbs -->
     <div class="section pt-4 pb-0">
-      <nav class="breadcrumb">
-        <ul>
-          <li><a href="#">Bulma Coffee</a></li>
-          <li><a href="#">Shop</a></li>
-          <li><a href="#">Docker Dark Roast</a></li>
+      <nav class="breadcrumb has-arrow-separator">
+        <ul class="container">
+          <li><a href="#" class="has-text-grey">Bulma Coffee</a></li>
+          <li><a href="#" class="has-text-grey">Shop</a></li>
+          <li class="is-active"><a href="#">Docker Dark Roast</a></li>
         </ul>
       </nav>
     </div>
