product info added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <!-- != navbar menu -->
     </nav>
     <!-- != top navbar -->
+
     <!-- breadcrumbs -->
     <div class="section pt-4 pb-0">
       <nav class="breadcrumb has-arrow-separator">
@@ -53,6 +54,34 @@
       </nav>
     </div>
     <!-- != breadcrumbs -->
+
+    <!-- product info -->
+    <section class="section">
+      <div class="container">
+        <div class="columns is-vcentered">
+          <div class="is-3 column">
+            <h1 class="titel is-size-1">Docker</h1>
+            <h2 class="subtitel is-size-2">Dark Roast</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Quibusdam, doloremque est reiciendis unde error repellat
+              consequatur expedita magni! Tempore, maxime?
+            </p>
+          </div>
+          <div class="is-5 column has-text-centered">
+            <img src="img/product.png" alt="product image" class="px-6" />
+          </div>
+          <div class="is-4 column">
+            <div class="is-size-4 mb-4">$10.95</div>
+            <p class="mb-4">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod,
+              provident.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- != product info -->
 
     <!-- custom js -->
     <script src="js/main.js"></script>
