responsiveness added to product info for diff devices

--- a/index.html
+++ b/index.html
@@ -58,20 +58,28 @@
     <!-- product info -->
     <section class="section">
       <div class="container">
-        <div class="columns is-vcentered">
-          <div class="is-3 column">
-            <h1 class="titel is-size-1">Docker</h1>
-            <h2 class="subtitel is-size-2">Dark Roast</h2>
+        <div class="columns is-vcentered is-multiline">
+          <div class="is-3-desktop is-6-tablet column">
+            <h1
+              class="titel is-size-1-desktop is-size-2-tablet is-size-3-mobile"
+            >
+              Docker
+            </h1>
+            <h2
+              class="subtitel is-size-2-desktop is-size-3-tablet is-size-4-mobile"
+            >
+              Dark Roast
+            </h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Quibusdam, doloremque est reiciendis unde error repellat
               consequatur expedita magni! Tempore, maxime?
             </p>
           </div>
-          <div class="is-5 column has-text-centered">
+          <div class="is-5-desktop is-6-tablet column has-text-centered">
             <img src="img/product.png" alt="product image" class="px-6" />
           </div>
-          <div class="is-4 column">
+          <div class="is-4-desktop is-12-tablet column">
             <div class="is-size-4 mb-4">$10.95</div>
             <p class="mb-4">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod,
