tabs with js functionnality added to additional prod details section added

--- a/index.html
+++ b/index.html
@@ -91,6 +91,55 @@
     </section>
     <!-- != product info -->
 
+    <!-- additional prod details -->
+    <section class="section">
+      <div class="container">
+        <div class="columns is-8 is-variable">
+          <div class="column is-7-tablet">
+            <!-- tabs -->
+            <div class="tabs is-boxed">
+              <ul>
+                <li class="is-active" data-target="js--product-details">
+                  <a href="#">Product Details</a>
+                </li>
+                <li data-target="js--delivery-info">
+                  <a href="#">Delivery Information</a>
+                </li>
+              </ul>
+            </div>
+            <div class="px-2" id="js--tab-content">
+              <div id="js--product-details">
+                <h3 class="is-size-5 title">Product Details</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Aliquid accusantium, libero nisi nemo repellendus natus omnis
+                  consectetur quam rem autem sapiente voluptas mollitia culpa
+                  officia dolore sequi rerum labore ipsum?
+                </p>
+              </div>
+              <div id="js--delivery-info" class="is-hidden">
+                <h3 class="is-size-5 title">Delivery Information</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Aliquid accusantium, libero nisi nemo repellendus natus omnis
+                  consectetur quam rem autem sapiente voluptas mollitia culpa
+                  officia dolore sequi rerum labore ipsum?
+                </p>
+              </div>
+            </div>
+            <!-- != tabs -->
+          </div>
+          <div class="column is-5-tablet">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+            minima repellat minus fuga mollitia voluptatum corporis quia laborum
+            laboriosam quos facilis fugit temporibus reprehenderit possimus,
+            magni labore? Accusantium, quos. Distinctio.
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- != additional prod details -->
+
     <!-- custom js -->
     <script src="js/main.js"></script>
   </body>
