message box in additional prod info section added

--- a/index.html
+++ b/index.html
@@ -130,10 +130,21 @@
             <!-- != tabs -->
           </div>
           <div class="column is-5-tablet">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
-            minima repellat minus fuga mollitia voluptatum corporis quia laborum
-            laboriosam quos facilis fugit temporibus reprehenderit possimus,
-            magni labore? Accusantium, quos. Distinctio.
+            <!-- message box -->
+            <div class="message">
+              <div class="message-header">
+                <p>Earn Points with the Coffee Club</p>
+              </div>
+              <div class="message-body">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Fugiat amet, quibusdam repellendus cum nostrum dignissimos
+                  earum ipsa quaerat pariatur, adipisci dolorum, quasi veritatis
+                  minus debitis? Atque, fugit? Quasi, modi a.
+                </p>
+              </div>
+            </div>
+            <!-- != message box -->
           </div>
         </div>
       </div>
