related product section with cards and responsive behaviour added

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod,
               provident.
             </p>
+            <button class="button is-primary">Add to Cart</button>
           </div>
         </div>
       </div>
@@ -142,6 +143,9 @@
                   earum ipsa quaerat pariatur, adipisci dolorum, quasi veritatis
                   minus debitis? Atque, fugit? Quasi, modi a.
                 </p>
+                <div class="has-text-centered pt-5">
+                  <button class="button">Sign Up</button>
+                </div>
               </div>
             </div>
             <!-- != message box -->
@@ -150,6 +154,72 @@
       </div>
     </section>
     <!-- != additional prod details -->
+
+    <!-- cards -->
+    <section class="section">
+      <div class="continer">
+        <h3 class="title has-text-centered is-size-4">Related Products</h3>
+        <div
+          class="columns mt-5 is-8 is-veriable is-centered is-flex-mobile is-multiline"
+        >
+          <!-- first col with first card -->
+          <div class="column is-4-tablet is-3-desktop is-6-mobile">
+            <div class="card">
+              <div class="card-image has-text-centered px-3">
+                <img src="img/p1.png" alt="product-1" />
+              </div>
+              <div class="card-content has-text-centered-mobile">
+                <p>$12.95</p>
+                <p class="title is-size-5">Cortado Cup</p>
+              </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <a href="#" class="has-text-grey">View</a>
+                </p>
+              </footer>
+            </div>
+          </div>
+          <!-- != first col with first card -->
+          <!-- second col with second card -->
+          <div class="column is-4-tablet is-3-desktop is-6-mobile">
+            <div class="card">
+              <div class="card-image has-text-centered px-3">
+                <img src="img/p2.png" alt="product-2" />
+              </div>
+              <div class="card-content has-text-centered-mobile">
+                <p>$11.95</p>
+                <p class="title is-size-5">Docker Light</p>
+              </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <a href="#" class="has-text-grey">View</a>
+                </p>
+              </footer>
+            </div>
+          </div>
+          <!-- != second col with second card -->
+          <!-- third col with third card -->
+          <div class="column is-4-tablet is-3-desktop is-6-mobile">
+            <div class="card">
+              <div class="card-image has-text-centered px-3">
+                <img src="img/p3.png" alt="product-3" />
+              </div>
+              <div class="card-content has-text-centered-mobile">
+                <p>$9.95</p>
+                <p class="title is-size-5">Coffee Crush</p>
+              </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <a href="#" class="has-text-grey">View</a>
+                </p>
+              </footer>
+            </div>
+          </div>
+          <!-- != third col with third card -->
+        </div>
+      </div>
+    </section>
+    <!-- != cards -->
 
     <!-- custom js -->
     <script src="js/main.js"></script>
