modal js functionality added

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                   minus debitis? Atque, fugit? Quasi, modi a.
                 </p>
                 <div class="has-text-centered pt-5">
-                  <button class="button">Sign Up</button>
+                  <button class="button" id="js--signup-btn">Sign Up</button>
                 </div>
               </div>
             </div>
@@ -155,7 +155,7 @@
     </section>
     <!-- != additional prod details -->
 
-    <!-- cards -->
+    <!-- related products -->
     <section class="section">
       <div class="continer">
         <h3 class="title has-text-centered is-size-4">Related Products</h3>
@@ -219,7 +219,16 @@
         </div>
       </div>
     </section>
-    <!-- != cards -->
+    <!-- != related products -->
+
+    <!-- modal window -->
+    <div class="modal">
+      <div class="modal-background"></div>
+      <div class="modal-content has-background-white py-5 px-5">
+        <h3 class="title mb-6">join the Club</h3>
+      </div>
+    </div>
+    <!-- != modal window -->
 
     <!-- custom js -->
     <script src="js/main.js"></script>
