--- a/index.html
+++ b/index.html
@@ -85,7 +85,19 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod,
               provident.
             </p>
-            <button class="button is-primary">Add to Cart</button>
+            <form>
+              <div class="field">
+                <div class="control mb-6">
+                  <div class="select is-dark">
+                    <select name="select">
+                      <option value="small">Small (250g)</option>
+                      <option value="small">Large (500g)</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <button class="button is-primary">Add to Cart</button>
+            </form>
           </div>
         </div>
       </div>
@@ -226,6 +238,33 @@
       <div class="modal-background"></div>
       <div class="modal-content has-background-white py-5 px-5">
         <h3 class="title mb-6">join the Club</h3>
+        <!-- form -->
+        <form>
+          <div class="field">
+            <label class="label">Name</label>
+            <div class="control">
+              <input type="text" class="input" placeholder="Name" />
+            </div>
+          </div>
+          <div class="field">
+            <label class="label">Email</label>
+            <div class="control">
+              <input type="email" class="input" placeholder="Email" />
+            </div>
+          </div>
+          <div class="field">
+            <div class="control">
+              <label class="checkbox">
+                <input type="checkbox" name="" id="" />
+                I agree to the <a href="#">terms & conditions</a>
+              </label>
+            </div>
+          </div>
+          <div class="mt-6 has-text-centered">
+            <button class="button is-warning">Sign Up</button>
+          </div>
+        </form>
+        <!-- != form -->
       </div>
     </div>
     <!-- != modal window -->
